[Isolated Regions] Add validator FeatureRegionValidator to fail fast when a requested feature is not supported in the given region. In particular, the following features are set as unsupported:
* AWS Batch in ap-northeast-3 and us-iso* regions
* NICE DCV in us-iso* regions
* FSx Lustre in us-iso* regions
* FSx ONTAP in us-iso* regions
* FSx OpenZfs in us-iso* regions

Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/cli/tests/pcluster/validators/test_all_validators/test_scheduler_plugin_validators_are_called_with_correct_argument/scheduler_plugin.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_scheduler_plugin_validators_are_called_with_correct_argument/scheduler_plugin.yaml
@@ -10,6 +10,8 @@ HeadNode:
   LocalStorage:
     EphemeralVolume:
       MountDir: /scratch_head
+  Dcv:
+    Enabled: true
 Scheduling:
   Scheduler: plugin
   SchedulerSettings:
@@ -178,3 +180,13 @@ SharedStorage:
     StorageType: FsxLustre
     FsxLustreSettings:
       StorageCapacity: 3600
+  - MountDir: /my/mount/point4
+    Name: name4
+    StorageType: FsxOntap
+    FsxOntapSettings:
+      VolumeId: "fsvol-00e6e91b8898ec4ef"
+  - MountDir: /my/mount/point5
+    Name: name5
+    StorageType: FsxOpenZfs
+    FsxOpenZfsSettings:
+      VolumeId: "fsvol-00e6e91b8898ec4ef"
