Change get of node attributes to use /etc/chef/node_attributes.json
Signed-off-by: Francesco Giordano <giordafr@amazon.it>

--- a/cli/src/pcluster/resources/imagebuilder/parallelcluster_tag.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/parallelcluster_tag.yaml
@@ -5,7 +5,7 @@ schemaVersion: 1.0
 constants:
   - CookbookDefaultFile:
       type: string
-      value: /etc/chef/cookbooks/aws-parallelcluster/attributes/default.rb
+      value: /etc/chef/node_attributes.json
 
 phases:
   - name: test
@@ -136,12 +136,6 @@ phases:
                 echo "${VERSION}"
               }
 
-              get_cookbook_attribute () {
-                ATTRIBUTE_NAME="$1"
-                ATTRIBUTE_VALUE=$(grep -F "${ATTRIBUTE_NAME}" {{ CookbookDefaultFile }})
-                echo ${ATTRIBUTE_VALUE}
-              }
-
               # ParallelCluster bootstrap file
               if [[ -f /opt/parallelcluster/.bootstrapped ]]; then
                 add_tag "parallelcluster:bootstrap_file" "$(cat /opt/parallelcluster/.bootstrapped)"
@@ -195,7 +189,8 @@ phases:
               fi
               # ARM - No version file
               if [ -z "${CUDA_VERSION}" ] && [ -d /usr/local/cuda ]; then
-                CUDA_VERSION=$(get_cookbook_attribute "default['cluster']['nvidia']['cuda_version']" | tr -d '\n' | cut -d = -f 2 | xargs)
+                # Get cuda version from chef attributes
+                CUDA_VERSION=$(jq '.default.cluster.nvidia.cuda_version' {{ CookbookDefaultFile }} | tr -d '\n' | cut -d = -f 2 | xargs)
               fi
               add_tag "parallelcluster:cuda_version" "${CUDA_VERSION}"
               append_description "cuda" "${CUDA_VERSION}"
