--- a/cli/src/pcluster/resources/imagebuilder/parallelcluster_test.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/parallelcluster_test.yaml
@@ -5,7 +5,7 @@ schemaVersion: 1.0
 constants:
   - CookbookDefaultFile:
       type: string
-      value: /etc/chef/cookbooks/aws-parallelcluster/attributes/default.rb
+      value: /etc/chef/node_attributes.json
 
 phases:
   - name: test
@@ -55,7 +55,7 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['python-version']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster."python-version"' {{ CookbookDefaultFile }})
               VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${VERSION}
 
@@ -65,7 +65,7 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['scheduler_plugin']['python_version']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.scheduler_plugin.python_version' {{ CookbookDefaultFile }})
               VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${VERSION}
 
@@ -76,9 +76,8 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['base_dir']" {{ CookbookDefaultFile }})
-              BASE_DIR=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
-              PYENV_ROOT+="${BASE_DIR}/pyenv"
+              PATTERN=$(jq '.default.cluster.system_pyenv_root' {{ CookbookDefaultFile }})
+              PYENV_ROOT=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${PYENV_ROOT}
 
       - name: SchedulerPluginPyenvRoot
@@ -87,9 +86,8 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['base_dir']" {{ CookbookDefaultFile }})
-              BASE_DIR=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
-              PYENV_ROOT+="${BASE_DIR}/shared/scheduler-plugin/pyenv"
+              PATTERN=$(jq '.default.cluster.scheduler_plugin.pyenv_root' {{ CookbookDefaultFile }})
+              PYENV_ROOT=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${PYENV_ROOT}
 
       - name: CookbookVirtualenvPath
@@ -132,7 +130,7 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['reserved_base_uid']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.reserved_base_uid' {{ CookbookDefaultFile }})
               RESERVED_BASE_UID=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo "${RESERVED_BASE_UID}"
 
