--- a/cli/src/pcluster/resources/imagebuilder/parallelcluster_validate.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/parallelcluster_validate.yaml
@@ -5,7 +5,7 @@ schemaVersion: 1.0
 constants:
   - CookbookDefaultFile:
       type: string
-      value: /etc/chef/cookbooks/aws-parallelcluster/attributes/default.rb
+      value: /etc/chef/node_attributes.json
 
 phases:
   - name: validate
@@ -143,7 +143,7 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['munge']['munge_version']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.munge.munge_version' {{ CookbookDefaultFile }})
               VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${VERSION}
 
@@ -153,7 +153,7 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['nvidia']['driver_version']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.nvidia.driver_version' {{ CookbookDefaultFile }})
               VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${VERSION}
 
@@ -163,7 +163,7 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['nvidia']['cuda_version']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.nvidia.cuda_version' {{ CookbookDefaultFile }})
               VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${VERSION}
 
@@ -175,7 +175,7 @@ phases:
               set -v
               cuda_ver="{{ validate.CudaVersion.outputs.stdout }}"
               if [ ${cuda_ver} \> '11.4' ]; then
-                PATTERN=$(grep -F "default['cluster']['nvidia']['cuda_samples_version']" {{ CookbookDefaultFile }})
+                PATTERN=$(jq '.default.cluster.nvidia.cuda_samples_version' {{ CookbookDefaultFile }})
                 VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
                 echo cuda-samples-${VERSION}/Samples
               else
@@ -190,7 +190,7 @@ phases:
               set -v
               cuda_ver="{{ validate.CudaVersion.outputs.stdout }}"
               if [ ${cuda_ver} \> '11.4' ]; then
-                PATTERN=$(grep -F "default['cluster']['nvidia']['cuda_samples_version']" {{ CookbookDefaultFile }})
+                PATTERN=$(jq '.default.cluster.nvidia.cuda_samples_version' {{ CookbookDefaultFile }})
                 VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
                 echo cuda-samples-${VERSION}/bin
               else
@@ -203,10 +203,10 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['armpl']['major_minor_version']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.armpl.major_minor_version' {{ CookbookDefaultFile }})
               MAJOR_MINOR_VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               VERSION+="${MAJOR_MINOR_VERSION}."
-              PATTERN=$(grep -F "default['cluster']['armpl']['patch_version'] = '0'" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.armpl.patch_version' {{ CookbookDefaultFile }})
               PATCH_VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               VERSION+="${PATCH_VERSION}"
               echo ${VERSION}
@@ -217,7 +217,7 @@ phases:
           commands:
             - |
               set -v
-              PATTERN=$(grep -F "default['cluster']['armpl']['gcc']['major_minor_version']" {{ CookbookDefaultFile }})
+              PATTERN=$(jq '.default.cluster.armpl.gcc.major_minor_version' {{ CookbookDefaultFile }})
               VERSION=$(echo ${PATTERN} | tr -d '\n' | cut -d = -f 2 | xargs)
               echo ${VERSION}
 
