Use https url for custom chef cookbook
S3 is supported only when the cluster is created in the same region of the bucket.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
+++ b/tests/integration-tests/tests/createami/test_createami/test_build_image/image.config.yaml
@@ -28,4 +28,4 @@ DeploymentSettings:
 
 DevSettings:
     Cookbook:
-        ChefCookbook: s3://us-east-1-aws-parallelcluster/patches/3.4.1/aws-parallelcluster-cookbook-3.4.1.tgz
+        ChefCookbook: https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/3.4.1/aws-parallelcluster-cookbook-3.4.1.tgz
