`[policies]` Return the Arn of the UserRole in the output of the policies substack.

--- a/cloudformation/policies/parallelcluster-policies.yaml
+++ b/cloudformation/policies/parallelcluster-policies.yaml
@@ -78,8 +78,8 @@ Outputs:
     Condition: EnableFSxS3AccessCondition
     Value: !Ref ParallelClusterFSxS3AccessPolicy
 
-  ParallelClusterUserRole:
-    Value: !Ref ParallelClusterUserRole
+  ParallelClusterUserRoleArn:
+    Value: !GetAtt ParallelClusterUserRole.Arn
 
   DefaultParallelClusterIamAdminPolicy:
     Condition: EnableIamPolicy
