--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -13,6 +13,8 @@ test-suites:
   efa:
     test_efa.py::test_efa:
       dimensions:
+        # Capacity Reservation for `c5n.18xlarge` created in `us-east-1a` do not move unless the target region/AZ also
+        # has a Capacity Reservation for `c5n.18xlarge`
         - regions: ["us-east-1"]
           instances: ["c5n.18xlarge"]
           oss: ["alinux2"]
@@ -21,6 +23,8 @@ test-suites:
           instances: ["p4d.24xlarge"]
           oss: ["alinux2"]
           schedulers: ["slurm"]
+        # Capacity Reservation for `c6gn.16xlarge` created in `us-east-1a` do not move unless the target region/AZ also
+        # has a Capacity Reservation for `c6gn.16xlarge`
         - regions: ["us-east-1"]
           instances: ["c6gn.16xlarge"]
           oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
