--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
@@ -17,9 +17,9 @@ Scheduling:
     - Name: broken
       Networking:
         SubnetIds:
-          - {{ private_subnet_id }}
+          - {{ private_subnet_ids[0] }}
           {% if scheduler == "slurm" %}
-          - {{ private_az2_subnet_id }}
+          - {{ private_subnet_ids[1] }}
           {% endif %}
       CustomActions:
         OnNodeStart:
@@ -42,9 +42,9 @@ Scheduling:
     - Name: half-broken
       Networking:
         SubnetIds:
-          - {{ private_subnet_id }}
+          - {{ private_subnet_ids[0] }}
           {% if scheduler == "slurm" %}
-          - {{ private_az2_subnet_id }}
+          - {{ private_subnet_ids[1] }}
           {% endif %}
       CustomActions:
         OnNodeStart:
@@ -75,9 +75,9 @@ Scheduling:
     - Name: normal
       Networking:
         SubnetIds:
-          - {{ private_subnet_id }}
+          - {{ private_subnet_ids[0] }}
           {% if scheduler == "slurm" %}
-          - {{ private_az2_subnet_id }}
+          - {{ private_subnet_ids[1] }}
           {% endif %}
       CustomActions:
         OnNodeStart:
