--- a/tests/integration-tests/tests/storage/test_ebs/test_ebs_multiple/pcluster.config.yaml
+++ b/tests/integration-tests/tests/storage/test_ebs/test_ebs_multiple/pcluster.config.yaml
@@ -41,7 +41,7 @@ Scheduling:
           {% endif %}
       Networking:
         SubnetIds:
-          - {{ private_subnet_id }}
+          - {{ private_subnet_ids[0] }}
     {% if scheduler == "slurm" %}
     - Name: queue-1
       ComputeSettings:
@@ -59,7 +59,7 @@ Scheduling:
           MaxCount: 1
       Networking:
         SubnetIds:
-          - {{ private_az3_subnet_id }}
+          - {{ private_subnet_ids[1] }}
     {% endif %}
 SharedStorage:
   - MountDir: {{ mount_dirs[0] }}
