Remove additional CIDR subnet
Remove additional CIDR subnet and use one of the other subnets that are now created in each AZ

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_compute_console_logging/pcluster.config.yaml
+++ b/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_compute_console_logging/pcluster.config.yaml
@@ -20,7 +20,7 @@ Scheduling:
           MaxCount: 10
       Networking:
         SubnetIds:
-          - {{ no_internet_subnet_id }}
+          - {{ isolated_subnet_id }}
 Monitoring:
   Logs:
     CloudWatch:
