change unit test of adding alarms to use example configs and update alarm ids

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -206,7 +206,7 @@ Monitoring:
       Enabled: true
   Dashboards:
     CloudWatch:
-      Enabled: true  # true
+      Enabled: false  # true
 AdditionalPackages:
   IntelSoftware:
     IntelHpcPlatform: false
