--- a/tests/integration-tests/configs/p4d-efa.yaml
+++ b/tests/integration-tests/configs/p4d-efa.yaml
@@ -1,5 +1,5 @@
 {%- import 'common.jinja2' as common -%}
-{%- set regions = ["use1-az6"] -%}   # do not move, unless capacity reservation is moved as well
+{%- set regions = ["us-east-1"] -%}
 {%- set instances = ["p4d.24xlarge"] -%}
 
 ---
