add IAM policies for cloudwatch alarms in integration test

--- a/tests/integration-tests/tests/log_rotation/test_log_rotation/test_log_rotation/pcluster.config.yaml
+++ b/tests/integration-tests/tests/log_rotation/test_log_rotation/test_log_rotation/pcluster.config.yaml
@@ -31,3 +31,6 @@ Monitoring:
   Logs:
     Rotation:
       Enabled: true
+DevSettings:
+  Cookbook:
+    ChefCookbook: s3://delmeng-aws-parallelcluster-cookbook-development/parallelcluster/3.6.0/cookbooks/aws-parallelcluster-cookbook-3.6.0.tgz
