include IAM policies for cloudwatch alarms in integration test

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -612,6 +612,11 @@ Resources:
               - cloudwatch:ListDashboards
               - cloudwatch:DeleteDashboards
               - cloudwatch:GetDashboard
+              - cloudwatch:PutMetricAlarm
+              - cloudwatch:DeleteAlarms
+              - cloudwatch:DescribeAlarmHistory
+              - cloudwatch:DescribeAlarms
+              - cloudwatch:DescribeAlarmsForMetric
             Resource: '*'
             Effect: Allow
             Condition: !If
