--- a/tests/integration-tests/tests/dashboard_and_alarms/test_dashboard_and_alarms/test_dashboard_and_alarms/pcluster.config.yaml
+++ b/tests/integration-tests/tests/dashboard_and_alarms/test_dashboard_and_alarms/test_dashboard_and_alarms/pcluster.config.yaml
@@ -23,6 +23,8 @@ Scheduling:
           {% else %}
           Instances:
             - InstanceType: {{ instance }}
+          # set MinCount to 1 in order to test compute node disk and memory metrics are not gathered
+          MinCount: 1
           {% endif %}
 Monitoring:
   DetailedMonitoring: true
