Add required policies for metric filter
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -730,6 +730,9 @@ Resources:
               - logs:CreateLogGroup
               - logs:TagResource
               - logs:UntagResource
+              - logs:DescribeMetricFilters
+              - logs:PutMetricFilter
+              - logs:deleteMetricFilter
             Resource: '*'
             Effect: Allow
             Condition: !If
